--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Benjamin GUINET
     - name: Date of Birth
-      value: 14th March 1879
+      value: 6th December 1995
     - name: Languages
-      value: English, German
+      value: English, French
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University Claude Bernard Lyon1, Lyon, France
+      year: 2023
       description:
         - Description 1.
         - Description 2.
