--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -71,13 +71,12 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2024
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - PhD thesis award in fundamental virology science (Bruxelles).
+    - year: 2024
       items:
-        - Max Planck Medal
+        - Travel fellowship to assist in the French Virology day in 2024
 
 - title: Academic Interests
   type: nested_list
