--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,4 +62,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hiking, Bouldering, Running, Trail, Popularizing science, Escape rooms.
+    - <u>Hobbies:</u> Hiking, Bouldering, Running, Trail, Popularizing science, Escape rooms
