--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,7 +13,7 @@
   contents:
     - title: PhD in Evolutionary Genomics
       institution: Department of COEVOL Multi-Scale Coevolution (LBBE), University Claude Bernard Lyon1 (UCBL1), France
-      year: 01/10/2019 – 21/03/2023
+      year: 01/10/2019 - 21/03/2023
       description:
         - Supervisor: Dr Julien Varaldi.
         - Thesis: "Global study of viral domestication in parasitoid wasps".
@@ -22,7 +22,7 @@
 
     - title: MSc in Biology (Ecology, Evolution, Genomics)
       institution: University Claude Bernard Lyon1 (UCBL1), France
-      year: 2017 – 2019
+      year: 2017 - 2019
 
     - title: Erasmus Exchange (1st semester, 3rd year Bachelor)
       institution: University of Tromsø, Norway
@@ -30,14 +30,14 @@
 
     - title: BSc in Biology (Science and Biodiversity)
       institution: University Claude Bernard Lyon1 (UCBL1), France
-      year: 2014 – 2017
+      year: 2014 - 2017
 
 - title: Experience
   type: time_table
   contents:
     - title: Postdoctoral Researcher
       institution: Centre for Palaeogenetics & Natural History Museum, Stockholm, Sweden
-      year: 14/09/2023 – present
+      year: 14/09/2023 - present
       description:
         - Supervised by Dr Tom van der Valk.
         - Main research: using ancient DNA from 4,000 to one million years old specimens to understand past microbial interactions in ancient extinct megafauna (e.g., mammoths).
