--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -25,7 +25,7 @@
       year: 2017 - 2019
 
     - title: Erasmus Exchange (1st semester, 3rd year Bachelor)
-      institution: University of Tromsø, Norway
+      institution: University of Tromso, Norway
       year: 2017
 
     - title: BSc in Biology (Science and Biodiversity)
