Edit reviews and CV

--- a/_config.yml
+++ b/_config.yml
@@ -638,6 +638,8 @@ jsonresume:
   - projects
   - volunteer
   - awards
+  - presentations
+  - reviews for journals
   - certificates
   - skills
   - languages
