--- a/_config.yml
+++ b/_config.yml
@@ -639,7 +639,7 @@ jsonresume:
   - volunteer
   - awards
   - presentations
-  - reviews for journals
+  - reviews
   - certificates
   - skills
   - languages
