Add new conference

--- a/_config.yml
+++ b/_config.yml
@@ -638,7 +638,7 @@ jsonresume:
   - projects
   - volunteer
   - awards
-  - presentations
+  - conferences
   - reviews
   - certificates
   - skills
